# declrative-bem-pipeline

./: .gitignore  README.md  infomation.txt  pyproject.toml
declarative_beam/: __init__.py
declarative_beam/cli/: main.py
declarative_beam/core/: base_transform.py  pipeline_builder.py  transform_registry.py  yaml_processor.py
declarative_beam/transforms/: __init__.py
declarative_beam/transforms/aggregation/: __init__.py  basic.py
docker/: bigtable-emulator.Dockerfile  docker-compose-bigtable.yml  jupyter.Dockerfile
docs/: README.md
docs/advanced/: README.md  custom_transforms.md  dataflow_integration.md
docs/examples/: README.md  custom_transforms.md  data_enrichment.md  payment_processing.md
docs/getting_started/: README.md  first_pipeline.md  installation.md
docs/reference/: yaml_config.md
docs/transforms/: README.md
docs/transforms/custom/: README.md  (+1 more)
examples/custom_transforms/: README.md  advanced_pipeline.yaml  pipeline.yaml  run_advanced_pipeline.py  run_pipeline.py  sample_data.csv  utils.py
examples/payment_processing/: aggregation_pipeline.yaml  complete_pipeline.yaml  enrichment_pipeline.yaml  final_pipeline.yaml  fraud_pipeline.yaml  generate_test_data.py  payment_pipeline.yaml  simple_aggregation_pipeline.yaml  simple_pipeline.yaml  utils.py
examples/xml_bigtable/: README.md  pipeline.yaml  run_pipeline.py  sample_data.xml  setup_bigtable.py  start_emulator.sh  stop_emulator.sh  test_emulator_write.py  utils.py
tests/: csv_utils.py  test_custom_transforms.py  test_pipeline_runner.py  test_transforms.py  test_window_transforms.py
tests/test_data/: advanced_pipeline.yaml  custom_transform_input.csv  custom_transform_pipeline.yaml  input.csv  reference.csv  runner_selection_pipeline.yaml  simple_pipeline.yaml  timestamped_input.csv  windowing_pipeline.yaml
(+43 files in other folders)
